# fastapi_jinja_test

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  README.md  alembic.ini  compose.yml  conftest.py  create_user.py  docker-compose.prod.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  test_connection.py
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 97bc3ff55950_create_users_table.py
app/: config.py  database.py  main.py  models.py  schemas.py
tests/: test_database.py  test_main.py  test_models.py  test_schemas.py
