[tool.poetry]
name = "saas-fastapi"
version = "0.1.0"
description = ""
authors = ["Cephaz <pierrezhoou@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
email-validator = "^2.2.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.3"
pylint = "^3.3.1"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
